Fix wrap to footer distance

--- a/Resources/Public/Stylesheets/GIB.GradingTool.css
+++ b/Resources/Public/Stylesheets/GIB.GradingTool.css
@@ -16,9 +16,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     min-height: 100%;
     height: auto;
     /* Negative indent footer by its height */
-    margin: 0 auto -60px;
+    margin: 0 auto -100px;
     /* Pad bottom by footer height */
-    padding-bottom: 60px;
+    padding-bottom: 100px;
 }
 
 .btn-primary {
